# mlx-mtp

./: .gitignore  NOTICE  README.md  pyproject.toml
benchmarks/: RESULTS.md  benchmark.json
mlx_mtp/: __init__.py  _import_guard.py  bench.py  dflash.py  engine.py  hybrid.py  loader.py  mxfp4_quantize.py  oq_quantize.py  quantize.py  run.py  serve.py  tokenizer.py
mlx_mtp/dflash/: __init__.py  config.py  model.py
mlx_mtp/models/: _activations.py  _qwen3_vl_config.py  base.py  cache.py
mlx_mtp/models/qwen3_5/: __init__.py  config.py  gated_delta.py  glue.py  language.py  mtp_head.py  vision.py
tests/: test_purity_and_structure.py
