[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-mtp"
version = "0.1.0"
description = "Native MTP speculative decoding + vision-preserving 8-bit quantization for Qwen3.5/3.6 VLMs on Apple Silicon (MLX)."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
keywords = ["mlx", "apple-silicon", "speculative-decoding", "mtp", "qwen", "vlm", "quantization"]
authors = [
  { name = "junainfinity", email = "junainfinity@users.noreply.github.com" },  # <-- EDIT THIS before publishing
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "Operating System :: MacOS",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Runtime note: this also requires the oMLX stack (omlx + its pinned mlx/mlx-lm/
# mlx-vlm commits), which is NOT on PyPI — install it from source separately:
#   git clone https://github.com/jundot/omlx && pip install -e ./omlx
dependencies = [
  "mlx>=0.31,<0.32 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "numpy>=2",
]

[project.urls]
Homepage = "https://github.com/junainfinity/mlx-mtp"   # <-- EDIT after you create the repo
Issues = "https://github.com/junainfinity/mlx-mtp/issues"

[project.scripts]
mlx-mtp-quantize = "mlx_mtp.oq_quantize:main"
mlx-mtp-bench = "mlx_mtp.bench:main"

[tool.hatch.build.targets.wheel]
packages = ["mlx_mtp"]
