[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-mtp"
version = "0.2.0"
description = "Pure-MLX MXFP4/MXFP8 quantization + native MTP speculative decoding for Qwen3.5/3.6 VLMs on Apple Silicon, with the vision tower and MTP head preserved."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
keywords = ["mlx", "apple-silicon", "speculative-decoding", "mtp", "qwen", "vlm", "quantization"]
authors = [
  { name = "junainfinity", email = "junainfinity@users.noreply.github.com" },  # <-- EDIT THIS before publishing
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "Operating System :: MacOS",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Pure Apple-MLX runtime: only mlx.core / mlx.nn for compute. transformers +
# pillow are used ONLY at the tokenizer + image-preprocessing I/O boundary.
# No third-party ML-inference frameworks — at install time or runtime.
dependencies = [
  "mlx>=0.31,<0.32 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "numpy>=2",
  "transformers>=4.49",
  "pillow>=10",
]

[project.urls]
Homepage = "https://github.com/junainfinity/mlx-mtp"   # <-- EDIT after you create the repo
Issues = "https://github.com/junainfinity/mlx-mtp/issues"

[project.scripts]
mlx-mtp-quantize = "mlx_mtp.quantize:main"
mlx-mtp-bench = "mlx_mtp.bench:main"

[tool.hatch.build.targets.wheel]
packages = ["mlx_mtp"]
